# chess

./: .chess_users.json  BUILD_AND_RUN.md  Cargo.toml  ENHANCED_FEATURES.md  README.md
.chess_saves/: alice_1761893512.json  bob_1761893577.json
src/: auth.rs  board.rs  eval.rs  gamesave.rs  main.rs  main_old.rs  movegen.rs  perft.rs  search.rs  tips.rs  tt.rs  ui.rs  utils.rs  zobrist.rs
